# mbr

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: header.rs  lib.rs  partition.rs
