[package]
name = "mbr"
version = "0.2.1"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]
license = "MIT"
description = "Parse legacy mbr partition tables with ease"
repository = "https://github.com/kallisti5/mbr"
readme = "README.md"
keywords = ["mbr", "bios", "partition", "legacy", "table"]

[dependencies]
