[package]
name = "mbr"
version = "0.2.2"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]
license = "MIT"
description = "Parse legacy mbr partition tables with native Rust"
repository = "https://github.com/kallisti5/mbr"
readme = "README.md"
keywords = ["mbr", "bios", "partition", "legacy", "table"]

[dependencies]
